--- a/tutorials/hello-CSS/styles.css
+++ b/tutorials/hello-CSS/styles.css
@@ -14,4 +14,9 @@ h2{
 
 h1, h2, h3, h4, h5, h6 {
   font-family: "Helvetica", "Arial", sans-serif;
+  font-weight: normal;
+}
+
+a {
+  text-decoration: none;
 }
