Added more visual and audio files

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -107,15 +107,15 @@ li {
 }
 
 .TPN-header {
-  background: #C4FAD4;
-}
-
-.PM-header {
   background: #FAC4EA;
 }
 
-.WESA-header {
+.PM-header {
   background: #C4CFFA;
+}
+
+.WESA-header {
+  background: #FAEFC4;
 }
 
 .FM-header {
@@ -124,4 +124,13 @@ li {
 
 .CDM-header {
   background: #C4CFFA;
+}
+
+.Pitt-header {
+  background: #FAEFC4;
+  font-family: "corbert", Verdana, sans-serif;
+}
+
+.radio-header {
+  background: #FAC4EA;
 }
